--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,5 @@
-@import '../src/scss/themes/theme-dark.scss';
-@import '../src/scss/themes/theme-light.scss';
+@import './src/scss/themes/theme-dark.scss';
+@import './src/scss/themes/theme-light.scss';
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200;300&display=swap');
 
 html {
@@ -46,6 +46,12 @@ header {
 	padding-top: 150px;
 	padding-bottom: 0;
 }
+
+nav {
+	position: fixed;
+	background-color: #fff;
+}
+
 
 .language-icon {
 	font-size: 50px;
@@ -218,7 +224,7 @@ header h1 {
 	align-items: center;
 }
 
-#resume {
+#experience {
 	background: #efe1bd;
 }
 
@@ -374,6 +380,18 @@ header h1 {
 	.portfolio .portfolio-item {
 		margin-bottom: 30px;
 	}
+}
+
+#education {
+	background: #1F1F1F;
+	min-height: 400px;
+	width: 100%;
+	overflow: hidden;
+	
+}
+
+.card-text p{
+	text-align: justify;
 }
 
 #skills {
