--- a/src/scss/themes/theme-dark.scss
+++ b/src/scss/themes/theme-dark.scss
@@ -1,6 +1,6 @@
 body[data-theme="dark"] {  
 
-   @import '../src/scss/dark-slider.scss';
+   @import './src/scss/dark-slider.scss';
 
    .slider-tab {
       background-color: #8C8C8C;
@@ -9,6 +9,8 @@ body[data-theme="dark"] {
    .title-styles {
       color: white;
    }
+
+   
 
    .header-icon {
       color: #3C342C;
@@ -66,7 +68,7 @@ body[data-theme="dark"] {
       }
    }
 
-   #resume {
+   #experience {
       filter: brightness(80%);
       background: #5b5b5b;
       .section-title {
